# video_denoising_cuda

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
include/: add_noise.hpp  progress_bar.hpp  stmkb_cpu.hpp  stmkb_gpu.hpp  video_processor.hpp
src/: stmkb_cpu.cpp  stmkb_gpu.cpp  video_processor.cpp
